# rdfm

./: .gitignore  CHANGES-minimal.md  NEWS  README  clean.sh  configure.ac  install.bash
data/: Makefile.am  keybinds.conf  pcmanfm.conf  rdfm-desktop-pref.desktop.in  rdfm.1.in  rdfm.conf  rdfm.desktop.in
data/ui/: Makefile.am  about.glade.in
po/: POTFILES.in
src/: Makefile.am  app-config.c  app-config.h  connect-server.c  connect-server.h  desktop.c  gseal-gtk-compat.h  main-win-ui.c  main-win.c  pcmanfm.c  pref.c  rdfm  rdfm-archive.c  rdfm-archive.h  rdfm-modules.h  rdfm.c  rdfm.h  tab-page.c  tab-page.h  volume-manager.c
